# ChangeLog for sys-apps/hal
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/hal/Attic/ChangeLog,v 1.135 2007/03/30 05:46:53 steev Exp $

*hal-0.5.9_rc2 (30 Mar 2007)

  30 Mar 2007; Steev Klimaszewski <steev@gentoo.org> +hal-0.5.9_rc2.ebuild:
  New upstream release - this is a release candidate, and the final should be
  released within the next few days.  Package.masked, please test.

  19 Feb 2007; <cardoe@gentoo.org> hal-0.5.7.1-r5.ebuild:
  Add back hal_unmount that was accidently removed

  15 Feb 2007; Jeroen Roovers <jer@gentoo.org> hal-0.5.7.1-r5.ebuild:
  Stable for HPPA (bug #166790).

  15 Feb 2007; Gustavo Zacarias <gustavoz@gentoo.org> hal-0.5.7.1-r5.ebuild:
  Stable on sparc wrt #166790

  14 Feb 2007; Doug Goldstein <cardoe@gentoo.org> hal-0.5.7.1-r5.ebuild:
  Fix issue with newer pciutils that uses gzipped pci.ids, which HAL can not
  handle

  14 Feb 2007; Markus Rothe <corsair@gentoo.org> hal-0.5.7.1-r5.ebuild:
  Stable on ppc64; bug #166790

  14 Feb 2007; Christian Faulhammer <opfer@gentoo.org>
  hal-0.5.7.1-r5.ebuild:
  stable x86; bug 166790

  14 Feb 2007; Doug Goldstein <cardoe@gentoo.org> hal-0.5.7.1-r5.ebuild:
  HAL does not read gzipped pci.ids data.

  14 Feb 2007; Doug Goldstein <cardoe@gentoo.org> hal-0.5.7.1-r5.ebuild:
  Retain current dmidecode behavior

  14 Feb 2007; Doug Goldstein <cardoe@gentoo.org> hal-0.5.7.1-r5.ebuild:
  Changing kernel checks from eerror to ewarn for the 2007.0 release media

  14 Feb 2007; Doug Goldstein <cardoe@gentoo.org> hal-0.5.7.1-r5.ebuild:
  ACPI stuff didn't work for -r5. Waiting until 0.5.8.1

  13 Feb 2007; Bryan Østergaard <kloeri@gentoo.org> hal-0.5.7.1-r3.ebuild:
  Stable on Alpha + IA64.

  30 Jan 2007; Doug Goldstein <cardoe@gentoo.org>
  +files/hal-0.5.7.1-ctype-fix.patch, hal-0.5.7.1-r4.ebuild:
  Fix undefined ctype.h include so everyone can stop getting their panties in
  a bundle.

*hal-0.5.7.1-r4 (30 Jan 2007)
