@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX 0.5-hald.rc 681 RMD160 f94d4a6e4ffb3beb84eeeb8e25564fa566ecc493 SHA1 fe413a84ee58cefa923cbc922a1c961fbdb17aa6 SHA256 802f83998c50a3e030d1db2f5a8364e4bb10eebecd464683445d63cf56702161
 MD5 facf81eeca7ebddff5d030acb36de31d files/0.5-hald.rc 681
 RMD160 f94d4a6e4ffb3beb84eeeb8e25564fa566ecc493 files/0.5-hald.rc 681
@@ -103,20 +106,11 @@ MD5 35750516d24e67c9f24f5f1e0da22ca0 files/hald 522
 RMD160 3d15723862416de29b6e2d18c53aec05b05216c3 files/hald 522
 SHA256 92f584b631026307485faa9ba386353b6d833349999e052fae0e8e9f82f83b6e files/hald 522
 DIST hal-0.5.7.1.tar.gz 1503156 RMD160 2861818b29546bd3628b1bda3d41238cf644c644 SHA1 233b67e724e68f41ec3f53adcfb7d139328c5813 SHA256 f15320c1ec3e5c89307fc0a6fbf75b6619de12c15ce8cc1a689e7bc3f2c0831b
-DIST hal-0.5.7.tar.gz 1528632 RMD160 342b00bea138ddf9f0f75e769612373bcf935d43 SHA1 f3962b29f3dad65fdaf708f680b5ba752a26227f SHA256 63c78e9b9c8308914372f9a762b02fa057bca2c6a1c7478ab595ba0fa92781d5
 DIST hal-0.5.9.rc2.tar.gz 1543333 RMD160 e3c788d9ef8778034f92b35e250e15eb034bf31c SHA1 863d4d06251a90bb53824dad78f46b4dcf43083f SHA256 107bd9e76de2ac7fc086dd545e08580a5aa75b1f979fdb55b3a686a1e833b166
-EBUILD hal-0.5.7-r3.ebuild 5770 RMD160 cad0f030042f5fc4a0953fc2fdccfd1e48bd78a9 SHA1 a451108d7f2c88619f54bb74f8aa39196cd44fc0 SHA256 b2f8275c56ed75e6645ad891f183b6359ec99b3e03d7f3c5f36f3c2cca8ee501
-MD5 ee0bb11c71fafebd0ed733d11eb9485b hal-0.5.7-r3.ebuild 5770
-RMD160 cad0f030042f5fc4a0953fc2fdccfd1e48bd78a9 hal-0.5.7-r3.ebuild 5770
-SHA256 b2f8275c56ed75e6645ad891f183b6359ec99b3e03d7f3c5f36f3c2cca8ee501 hal-0.5.7-r3.ebuild 5770
 EBUILD hal-0.5.7.1-r3.ebuild 6222 RMD160 5b7c01c492988a99e04b1e5516982bbe62fa8182 SHA1 6028da543a35928eb8ba9681f9c188c203842b11 SHA256 0ecad9d4f734c2deeaa1b1d14642ee148a0a9808584e7fde02a2633113f67ad0
 MD5 516e7380bdf23063008d943c55a02c85 hal-0.5.7.1-r3.ebuild 6222
 RMD160 5b7c01c492988a99e04b1e5516982bbe62fa8182 hal-0.5.7.1-r3.ebuild 6222
 SHA256 0ecad9d4f734c2deeaa1b1d14642ee148a0a9808584e7fde02a2633113f67ad0 hal-0.5.7.1-r3.ebuild 6222
-EBUILD hal-0.5.7.1-r4.ebuild 6214 RMD160 dbc2befe87613fde41bacd74f087ded5fea10bab SHA1 16dd091f802797f02e9e69c1f03a5749f1b55d0d SHA256 159d5ef840125742c6b1f2880ee9ad50d77a77cb29b42a9b46a0094920835199
-MD5 848426833518e6fc7e093821e75f25a2 hal-0.5.7.1-r4.ebuild 6214
-RMD160 dbc2befe87613fde41bacd74f087ded5fea10bab hal-0.5.7.1-r4.ebuild 6214
-SHA256 159d5ef840125742c6b1f2880ee9ad50d77a77cb29b42a9b46a0094920835199 hal-0.5.7.1-r4.ebuild 6214
 EBUILD hal-0.5.7.1-r5.ebuild 6426 RMD160 ba28bce7126639c77de28ac2fc8d233475bb498e SHA1 2cf3547d002a80e225a8446d7b06b3b2a588fb82 SHA256 6e020d3a29d82b993984f58ab8ef3659d837c11bce25f3ad25df6f4748e11207
 MD5 709ca20b11819f2e13e381be47e19535 hal-0.5.7.1-r5.ebuild 6426
 RMD160 ba28bce7126639c77de28ac2fc8d233475bb498e hal-0.5.7.1-r5.ebuild 6426
@@ -125,26 +119,27 @@ EBUILD hal-0.5.9_rc2.ebuild 5195 RMD160 e0e1e1cd12c64102e528f390c291530e6280131d
 MD5 4ed743184af0b3303b3cd6c8987f483a hal-0.5.9_rc2.ebuild 5195
 RMD160 e0e1e1cd12c64102e528f390c291530e6280131d hal-0.5.9_rc2.ebuild 5195
 SHA256 a8d52c6d4e07b162655490369d25f5fa2dc2d6403a03a612bbed4a61602b5e9a hal-0.5.9_rc2.ebuild 5195
-MISC ChangeLog 20625 RMD160 39bafa6afa85214fbbbe96a4955c757f2ca6d2dd SHA1 e36c2ba87901e69ede8c9dcab1e1a671d5567287 SHA256 f5acebccea70e12023fbc8862dc4381bac61ae63af5aff650f8d930177c4c27e
-MD5 b68c00bc22fbc10a9172b10be136392d ChangeLog 20625
-RMD160 39bafa6afa85214fbbbe96a4955c757f2ca6d2dd ChangeLog 20625
-SHA256 f5acebccea70e12023fbc8862dc4381bac61ae63af5aff650f8d930177c4c27e ChangeLog 20625
-MISC metadata.xml 223 RMD160 ca8850c4808c8972fe9995c456578ff23cb4b3fb SHA1 28aa498172fa4c6f437adb79913ae16f4deb0c0c SHA256 49dd14861ed993df9f3509f82bb7f77e524b4b6c0e137677bb9f873d9cd8541d
-MD5 885e3073744523eaf2450514a311758b metadata.xml 223
-RMD160 ca8850c4808c8972fe9995c456578ff23cb4b3fb metadata.xml 223
-SHA256 49dd14861ed993df9f3509f82bb7f77e524b4b6c0e137677bb9f873d9cd8541d metadata.xml 223
-MD5 2cab9d9e3415f54f6368f796cf3df8ff files/digest-hal-0.5.7-r3 232
-RMD160 a3f08885fb362e481bd884a8f2192d3dc995fbee files/digest-hal-0.5.7-r3 232
-SHA256 1d79783e98c3e4f937148d5fb93916927d2484d85501a1f9a53b75c2080c15c2 files/digest-hal-0.5.7-r3 232
+MISC ChangeLog 20777 RMD160 d35166a50e4cff52afcbd621d2a6928f9796df65 SHA1 59e98b0de2615686f627cf994c2b509b5d8d8f52 SHA256 f8fb48aeec7b7d87dac80a87bca172f9969b15a77b9e546e758a7bad7ca65b41
+MD5 2bd40b7a88cec6afaf108e6d973e6280 ChangeLog 20777
+RMD160 d35166a50e4cff52afcbd621d2a6928f9796df65 ChangeLog 20777
+SHA256 f8fb48aeec7b7d87dac80a87bca172f9969b15a77b9e546e758a7bad7ca65b41 ChangeLog 20777
+MISC metadata.xml 345 RMD160 aa6e810e9546542453ebe5d6ca46804e99f447f2 SHA1 fef829210e8555807f9b69ba5afedffb8af8d02c SHA256 0c9aeabf473a6836c25a5db2ca86b880dec1efa9e52310725e08d1e0df93447d
+MD5 3317c4000387b670183d305ef9937b75 metadata.xml 345
+RMD160 aa6e810e9546542453ebe5d6ca46804e99f447f2 metadata.xml 345
+SHA256 0c9aeabf473a6836c25a5db2ca86b880dec1efa9e52310725e08d1e0df93447d metadata.xml 345
 MD5 f6986582ab2d32e615cb3dbce02614cd files/digest-hal-0.5.7.1-r3 238
 RMD160 dafbac18b72d6d7d879ccb37200ce33a870bb8a1 files/digest-hal-0.5.7.1-r3 238
 SHA256 6fede189bf70fa0a1009bcefea0a23a8941a051256e7fafc16793324db3c61c0 files/digest-hal-0.5.7.1-r3 238
-MD5 f6986582ab2d32e615cb3dbce02614cd files/digest-hal-0.5.7.1-r4 238
-RMD160 dafbac18b72d6d7d879ccb37200ce33a870bb8a1 files/digest-hal-0.5.7.1-r4 238
-SHA256 6fede189bf70fa0a1009bcefea0a23a8941a051256e7fafc16793324db3c61c0 files/digest-hal-0.5.7.1-r4 238
 MD5 f6986582ab2d32e615cb3dbce02614cd files/digest-hal-0.5.7.1-r5 238
 RMD160 dafbac18b72d6d7d879ccb37200ce33a870bb8a1 files/digest-hal-0.5.7.1-r5 238
 SHA256 6fede189bf70fa0a1009bcefea0a23a8941a051256e7fafc16793324db3c61c0 files/digest-hal-0.5.7.1-r5 238
 MD5 39710d0d56c5beb18d67b2845c19cc0a files/digest-hal-0.5.9_rc2 244
 RMD160 f540b0fa0b03dcb17a1cf39caa83e3d67c1fabf1 files/digest-hal-0.5.9_rc2 244
 SHA256 15c93494f0692b662024325758c82c96451ab4255eaa77ae67b5417457effda3 files/digest-hal-0.5.9_rc2 244
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.3 (GNU/Linux)
+
+iD8DBQFGDSBcoeSe8B0zEfwRAkxnAJ0RpviIga2LcOGadTxDg5+nsB+NPgCfSLzU
+863cgoTQsSmhYKWkdDfF1Y0=
+=XdPp
+-----END PGP SIGNATURE-----
