@@ -1,3 +1,0 @@
-MD5 4163afb8285db64e00e7b1392b401d92 hal-0.5.7.tar.gz 1528632
-RMD160 342b00bea138ddf9f0f75e769612373bcf935d43 hal-0.5.7.tar.gz 1528632
-SHA256 63c78e9b9c8308914372f9a762b02fa057bca2c6a1c7478ab595ba0fa92781d5 hal-0.5.7.tar.gz 1528632
